# wfxs

./: CMakeLists.txt  README.md
doc/: Doxyfile
resources/: FlossCSVtoWFXS.py
resources/floss/: anchor  anchor_fp.csv  anchor_sp.csv  dmc  dmc_fp.csv  dmc_sp.csv  jpcoats  jpcoats_fp.csv  jpcoats_sp.csv
resources/icons/: copy.xpm  cut.xpm  help.xpm  new.xpm  open.xpm  paste.xpm  preview.xpm  print.xpm  save.xpm
src/: .clang-format  CMakeLists.txt
src/clc/: CMakeLists.txt
src/clc/algorithm/: Bitops.h  BresenhamLine.h
src/clc/data/: BitMask.cpp  BitMask.h  BitString.cpp  BitString.h  Buffer.cpp  Buffer.h
src/clc/os/: Clock.cpp  Clock.h
src/clc/storage/: Path.cpp  Path.h
src/clc/support/: ByteOrder.h  Debug.cpp  Debug.h  Exception.h  LogAppenders.h  Logger.cpp  Logger.h
src/gtk/: CMakeLists.txt  XSGtkApplication.cpp  XSGtkApplication.h  XSGtkCanvas.cpp  XSGtkCanvas.h  XSGtkEditWindow.cpp  XSGtkEditWindow.h  main.cpp
src/gtkmm/: CMakeLists.txt  XSView_gtk.cpp  XSView_gtk.h  XSWindow_gtk.cpp  XSWindow_gtk.h  main.cpp
src/haiku/: CMakeLists.txt  XSAboutWindow.cpp  XSAboutWindow.h  XSApp_beos.cpp  XSEditFlossWindow.cpp  XSEditFlossWindow.h  XSPropertiesWindow.cpp  XSPropertiesWindow.h  XSStartupWizard.cpp  XSStartupWizard.h  XSToolWindow.cpp  XSToolWindow.h  XSView_beos.cpp  XSView_beos.h  XSWindowBeos.cpp  XSWindowBeos.h  XSWindowMenuUpdater.cpp  XSWindowMenuUpdater.h
src/qt/: CMakeLists.txt  XSArea.cpp  XSArea.h  XSPropertiesDialog.cpp  XSPropertiesDialog.h  XSQtApplication.cpp  XSQtApplication.h  XSQtCanvas.cpp  XSQtCanvas.h  XSQtEditWindow.cpp  XSQtEditWindow.h  XSQtPropertiesDialog.cpp  XSQtPropertiesDialog.h  main.cpp  mainwindow.cpp  mainwindow.h
src/wx/: CMakeLists.txt  XSCanvas.cpp  XSCanvas.h  XSDocChild.cpp  XSDocChild.h  XSEditFlossWindow.cpp  XSEditFlossWindow.h  XSFlossPaletteView.cpp  XSFlossPaletteView.h  XSPropertiesWindow.cpp  XSPropertiesWindow.h  XSStartupWizard.cpp  XSStartupWizard.h  XSToolWindow.cpp  XSToolWindow.h  XSView.cpp  XSView.h
src/xs/: BitMask.cpp  BitMask.h  BitOps.h  BitString.cpp  BitString.h  BresenhamLine.h  ByteOrder.h  CMakeLists.txt  LogAppenders.h  Logger.cpp  Logger.h  StringUtils.h  XSApplication.cpp  XSApplication.h  XSColor.cpp  XSColor.h  XSCommand.cpp  XSCommand.h  XSCommandClearSquare.cpp  XSCommandClearSquare.h  XSCommandFloodFill.cpp  XSCommandFloodFill.h  XSCommandLayer.cpp  XSCommandLayer.h  XSCommandSetBead.cpp  XSCommandSetBead.h  XSCommandSetFlossPalette.cpp  XSCommandSetFlossPalette.h  XSCommandSetKnot.cpp  XSCommandSetKnot.h  XSCommandSetProperties.cpp  XSCommandSetProperties.h  XSCommandSetSize.cpp  XSCommandSetSize.h  XSCommandSetStitch.cpp  XSCommandSetStitch.h  XSCommandSetStyle.cpp  XSCommandSetStyle.h  XSCommandSetTool.cpp  XSCommandSetTool.h  (+53 more)
src/xs/tests/: CMakeLists.txt  XSColorTest.cpp  XSCommandTest.cpp  XSFlossTest.cpp  XSLayerTest.cpp  XSModelTest.cpp  XSSkeinTest.cpp
